--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <ul>
                         <li><a href="index.html" class="button">Home</a></li>
                         <li><a href="http://google.com" class="button">About Us</a></li>
-                        <li><a href="calender.html" class="button">Calender</a></li>
+                        <li><a href="calendar.html" class="button">Calendar</a></li>
                     </ul>
                 </div>
             </div>
